--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic-Tac-Toe</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -16,17 +17,21 @@
   </div>
   
   <div class="board" id="board">
-    <div class="box">1</div>
-    <div class="box">2</div>
-    <div class="box">3</div>
-    <div class="box">4</div>
-    <div class="box">5</div>
-    <div class="box">6</div>
-    <div class="box">7</div>
-    <div class="box">8</div>
-    <div class="box">9</div>
+    <div class="box" id="0">0</div>
+    <div class="box" id="1">1</div>
+    <div class="box" id="2">2</div>
+    <div class="box" id="3">3</div>
+    <div class="box" id="4">4</div>
+    <div class="box" id="5">5</div>
+    <div class="box" id="6">6</div>
+    <div class="box" id="7">7</div>
+    <div class="box" id="8">8</div>
   </div>
 
-  <script src="script.js"></script>
+  <div class="winning-message" id="winning-message">
+    <div data-winning-message-text></div>
+    <button id="restartButton">Restart</button>
+  </div>
+  
 </body>
 </html>
