--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic-Tac-Toe</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%23304c89%22></rect><path d=%22M67.91 33.76L56.93 33.76L56.93 76.86Q55.94 77.14 54.14 77.36Q52.34 77.58 50.36 77.58L50.36 77.58Q46.13 77.58 44.42 76.14Q42.71 74.70 42.71 70.92L42.71 70.92L42.71 33.76L28.58 33.76Q28.04 32.85 27.55 31.41Q27.05 29.98 27.05 28.27L27.05 28.27Q27.05 25.20 28.40 23.81Q29.75 22.41 32.09 22.41L32.09 22.41L71.42 22.41Q72.05 23.31 72.50 24.76Q72.95 26.20 72.95 27.91L72.95 27.91Q72.95 30.88 71.60 32.31Q70.25 33.76 67.91 33.76L67.91 33.76Z%22 fill=%22%23fff%22></path></svg>" />
   <script src="script.js" defer></script>
 </head>
 <body>
 
   <h1 class="title" id="title">Tic-Tac-Toe</h1>
+  <button class="button open-button">Open player names modal</button>
+
+  <dialog class="modal" id="modal">
+    <h2>What are your names?</h2>
+    <label for="playerOneName">Player One (X's)</label>
+    <input type="text" name="playerOneName" id="playerOneName"><br>
+    <label for="playerTwoName">Player Two (O's)</label>
+    <input type="text" name="playerTwoName" id="playerTwoName"><br>
+    <button class="button close-button">Close</button>
+  </dialog>
 
   <div class="players">
-    <div class="player"> Player 1: <span id="name"></span>, <span id="peice"></span></div>
-    <div class="player"> Player 2: Name, Peice</div>
+    <div class="player"> Player 1: <span id="nameOne"></span>, X's</span></div>
+    <div class="player"> Player 2: <span id="nameTwo"></span>, O's</span></div>
     <button id="restartButton">Restart</button>
   </div>
   
